IMOD History
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
11/9/07: Added option to imodmesh to recompute normals from an existing mesh.

11/9/07: Added ability to set a directory to receive snapshots in 3dmod.

11/1/07: Fixed reading of ascii model with DOS line endings

10/29/07: Converted Xcorr to PIP input, removed redundant filters, adjusted 
origin when run on a subset of stack, renamed to Xcorrstack to reduce confusion
with xcorr.com.

10/24/07: Fixed install script to work on Vista and allowed alternate
installation directory for Windows.

10/21/07: Converted Boxavg to PIP input, made it take a model file instead of
a point file, and made it operate with and align to non-integer coordinates.

10/19/07: IMOD_3-10-20
10/19/07: Fixed defocus scaling bugs in ctfplotter and ctfphaseflip.

10/19/07: Fixed two bugs in mtk: computation of multiple graphs (broken 1/5/06)
and selection of neighboring mesh objects with multiple graphs.  Also added
an option to get lengths of connector lines between points of close approach.

10/18/07: Added Point2model as a complementary program to Model2point to allow
simple format for getting data into and out of IMOD models.

10/15/07: Fixed Tif2mrc when reading unequally sized images on Windows, added
an option to set output size, made different sizes work with all data modes and
made the image be centered in the output area when it is clipped or padded.

10/14/07: Fixed model2point to output index coordinates by default and added
an option to get scaled model coordinates instead.

10/14/07: Changed file size shown when opening a file to be in KB instead of
512-byte blocks and labeled with a K.

10/12/07: Changed interpolation routines used by Newstack and Blendmont to
operate around the true center of the image instead of being offset by half a
pixel.  This will change some output, but now the tilt axis should be located
properly for aligned tilt series rotated by large angles like 90 degrees.
